--- a/ApplauseWebService/src/index.html
+++ b/ApplauseWebService/src/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HW5 JPA</title>
+  <title>Applause Tester Matching</title>
   <base href="/">
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/bustedicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/applause.png">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/vendors/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css2/styles.css">
